--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,3 @@
-img {
-  max-height: 50px;
-}
-
 header {
   width: 100%;
   align-content: center;
@@ -9,14 +5,35 @@ header {
   border-bottom: 10px solid black;
 }
 
-.container {
-  background-color: white;
+.icon {
+  max-height: 50px;
+}
+
+#weatherIcon {
+  max-height: 200px;
+  max-width: 300px;
 }
 
 body {
-  background-color: blue;
+  background-image: url("images/weatherIcons.jpg");
+  background-repeat: repeat;
+  background-position: top center !important;
+  background-size: 300px;
+  background-attachment: fixed;
 }
 
 .navbar {
   margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+}
+
+.card {
+  background-color: white;
 }
