--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,4 @@
+/*style of the header with icons and words centered*/
 header {
   width: 100%;
   align-content: center;
@@ -9,11 +10,13 @@ header {
   max-height: 50px;
 }
 
+/*style of todays weather icon*/
 #weatherIcon {
   max-height: 200px;
   max-width: 300px;
 }
 
+/*Style of the background*/
 body {
   background-image: url("images/weatherIcons.jpg");
   background-repeat: repeat;
@@ -35,5 +38,13 @@ h3 {
 }
 
 .card {
+  background-color: lightskyblue;
+  border: 5px dashed black;
+  align-items: center;
+}
+
+.card-deck {
   background-color: white;
+  border: 5px dashed black;
+  margin: 0 auto;
 }
